hide map marker on mobile, fixes #41

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  /*fixes a random medium screen issue, 
+  /*fixes a random medium screen issue,
   investigate further */
   overflow-x:hidden;
 }
@@ -34,6 +34,9 @@ body {
 @media only screen and (max-width: 40em) {
   .front .callout {
     margin:0.625rem 0 1rem 0;
+  }
+  .intro .fa-stack{
+    display:none;
   }
 }
 .xtra-lg {
